# craw-full

backend/: .gitignore  README.md  app.py  models.py  pyproject.toml  scraper.py
backend/Templates/: index.html
frontend/: next.config.js  package-lock.json  package.json
frontend/src/components/: MusicChartsDashboard.js
frontend/src/pages/: index.js  music-charts.js
